DA++/DeviantArtSunrise.user.css
/* BETA 0.6 */
@-moz-document regexp("http[s]?://.*deviantart.com.*") {

body {
    --da-fixup-font: #ddd;
    --da-fixup-background: #333;
    --da-fixup-border: #555;
    --da-fixup-drop-shadow: #000;
    --da-fixup-content-font: #bbb;

    --L8: var(--da-fixup-font);
    --D7: var(--da-fixup-drop-shadow);
    --D8: var(--da-fixup-content-font);
    --L1: var(--da-fixup-content-font);
    --G12: var(--da-fixup-font);
}

body.theme-light:not(.basic) {
    --da-fixup-font: #373737;
    --da-fixup-background: #f9f9f9;
    --da-fixup-border: #f9f3f3;
    --da-fixup-drop-shadow: #606060;
    --da-fixup-content-font: #f0ebeb;
}
body.theme-light.light-green {
    --da-fixup-font: #000;
    --da-fixup-background: #fce6e6;
    --da-fixup-border: #f9f3f3;
    --da-fixup-drop-shadow: #606060;
    --da-fixup-content-font: #bbb;
}


.theme-dark ._2ilS5,
.theme-dark .forced-theme-light ._2ilS5,
.theme-light ._2ilS5, .theme-light .forced-theme-dark ._2ilS5 {
    --L4: var(--da-fixup-font);
}
.theme-dark ._1ZWCM,
.theme-dark ._1hS4B,
[id^="popper-root"] {
    --AS47: none;
}

.theme-dark .forced-theme-light ._3PQ6i, .theme-light {
    --L9: var(--da-fixup-font);
}
.theme-dark ._1TOd1, .no-theme-skin,
.theme-dark .LgNSK,
[id^="popper-root"] {
    --L8: var(--da-fixup-font);
    --L2: var(--da-fixup-background);
}
.no-theme-skin [data-role="menu"] {
    --D1: var(--da-fixup-font);
}

.theme-dark .forced-theme-light ._3M0vT,
.theme-dark .forced-theme-light ._2W1Gx, .theme-light ._2W1Gx {
    color: var(--da-fixup-font);
}

.theme-dark ._2Byfh, .theme-dark .forced-theme-light,
.sDE1k._1yL68,
._2cBdT,
#site-header-submit,
#site-header-more-menu,
#site-header-user-menu {
    background: var(--da-fixup-background);
    color: var(--da-fixup-font);
    --D1: var(--da-fixup-font);
    --L2: var(--da-fixup-background);
    --G4: var(--da-fixup-background);
    --L4: var(--da-fixup-border);
}
#site-header-user-menu {
    box-shadow: 0 4px 12px 0 var(--da-fixup-drop-shadow);
}

header[role="banner"],
nav[data-hook="profile_nav"] {
    --D1: var(--da-fixup-background);
}
#site-header-notifications {
    --D1: var(--da-fixup-font);
}

header button[aria-haspopup="true"]:not([aria-controls="site-header-more-menu"]) {
    --G4: var(--da-fixup-background);
}

.sDE1k._1yL68,
._2cBdT {
    --G4: transparent;
}

.theme-dark ._3Vfho,
#site-header-user-menu div[data-role="menu"] {
    background: none;
}

/* submit menu */
.TEeJd,.pZckm,
#site-header-more-menu,
.theme-dark ._2Byfh {
    --L8: var(--da-fixup-font);
    --L4: var(--da-fixup-border);
    --L2: var(--da-fixup-background);
    box-shadow: 0 4px 12px 0 var(--da-fixup-drop-shadow);
}
/* submit menu popup thing */
.TEeJd,._3Cl8u {
    color: var(--da-fixup-font);
    border-color: var(--da-fixup-border);;
}

/* fuck that banner*/
._1V4hC {
    height: 400px;
}
#content-container {
    margin-top: 0 !important;
}
.IcyS1._33RB- {
    max-height: 450px;
}
/****/
footer[role="contentinfo"] {
    height: 263px;
    padding-top: 30px;
}
footer > div:first-child > div:nth-child(2) {
    margin-bottom: 60px;
    margin-left: 40px;
}

/* back to top button*/
._13QrD, .kiGGF {
    display: none !important;
}

/** push the foooter to the bottom */
#root > div.wFhot {
    min-height: calc(100vh - 337px);
}
/* featured deviation tkes up the whole page */
div[data-hook="deviation_std_thumb"],
div[data-hook="deviation_std_thumb"] > div {
    max-height: 90vh;
}

/*Change the search background to black*/
.ReactModal__Overlay {
    --L8: var(--da-fixup-content-font);
    background: rgba(0, 0, 0, 0.8) !important;
}





}

@-moz-document regexp("http[s]?://(www.)?deviantart.com/[^/]+/journal/.*") {


[data-hook="art_stage"] {
    height: 30vh;
}

/* post body */
._1Nxi6 {
    width: 80%;
}

/* Reduce gap on the left of the title */

/* post title */
._1lAop {
    width: 100%;
}
[data-hook="action_bar"] > div:first-child > div:first-child {
    width: 100px;
}
/* Remove gap between edit icons and the cinema mode icons*/
[data-hook="action_bar"] > div:first-child > div:nth-child(3) {
    width: 90%;
}
/* Remove the cinema mode icons (we don't need these for journals)*/
[data-hook="action_bar"] > div:first-child > div:nth-child(5){
    display: none;
}

}

@-moz-document regexp("http[s]?://(www.)?deviantart.com/notifications/.*") {
/*notification*/
.Ijp9_ {
    margin: 2px;
    box-shadow: 0 0 3px var(--da-fixup-drop-shadow);
}
button._2qipq, /*category tab buttons*/
button._192Gk, /*view all buttons*/
button._1zPcM, /*deviant dropdown button*/
button._241Ia {
    transition: background 0.03s linear;
}
button._2qipq:hover,
button._192Gk:hover,
button._1zPcM:hover,
button._241Ia:hover {
    background: rgba(0,0,0,0.1) !important;
    padding: 10px !important;
    margin: -10px !important;
    border-radius: 4px;
}
/*make category nemes easier to read*/
button._2qipq /*category tab buttons*/ {
    font-weight: bold;
}
/*remove the random gap at the top of the notification list*/
._1F-dq {
    padding: 0;
}
}

